Updating Omid's Example
The implementation of Sample() has been changed, so this update
replicates the intended error.

--- a/section/05/debugging.Rmd
+++ b/section/05/debugging.Rmd
@@ -209,8 +209,8 @@ Data found [here](./data.csv)
 ```{r, eval=FALSE}
 myData <- read.csv('./data.csv')
 
-logitBoot <- function(y, x, nBoot = 500) {
-  set.seed(1)
+logitBoot <- function(y, x, nBoot = 2000) {
+  set.seed(5)
   out <- sapply(seq_len(nBoot), myglm, y, x)
   boot_se <- sd(out)
   return(boot_se)
@@ -270,7 +270,7 @@ for (i in 1:nCats) {
 params
 
 #pull out broken one
-foo <- try(lm(y ~ x, data = data[data$cats == 15, ])) # why is this different for me?
+foo <- try(lm(y ~ x, data = data[data$cats == 15, ]))
 foo
 
 # check what  it is
