--- a/units/unit8-bigData.lyx
+++ b/units/unit8-bigData.lyx
@@ -2281,7 +2281,28 @@ teacher age n
 
 \begin_layout Standard
 There are a lot of problems with this.
+ We'll list some in class:
 \end_layout
+
+\begin_layout Enumerate
+???
+\end_layout
+
+\begin_layout Enumerate
+??? 
+\end_layout
+
+\begin_layout Enumerate
+???
+\end_layout
+
+\begin_layout Enumerate
+???
+\end_layout
+
+\begin_layout Standard
+\begin_inset Note Note
+status open
 
 \begin_layout Enumerate
 'n' needs to be the maximum number of classes a student might take.
@@ -2307,6 +2328,11 @@ If one wants to change certain information (such as the age of a teacher)
  one needs to do it in many locations, which can result in errors and is
  inefficient.
  
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -4159,6 +4185,7 @@ fread()
 status open
 
 \begin_layout Plain Layout
+
 \begin_inset Argument 1
 status open
 
@@ -4191,6 +4218,7 @@ index
 status open
 
 \begin_layout Plain Layout
+
 \begin_inset Argument 1
 status open
 
@@ -4306,6 +4334,7 @@ read.table.ffdf()
 status open
 
 \begin_layout Plain Layout
+
 \begin_inset Argument 1
 status open
 
@@ -4402,6 +4431,7 @@ Next let's do a bit of exploration of the dataset.
 status open
 
 \begin_layout Plain Layout
+
 \begin_inset Argument 1
 status open
 
@@ -4542,6 +4572,7 @@ read.csv.sql()
 status open
 
 \begin_layout Plain Layout
+
 \begin_inset Argument 1
 status open
 
@@ -4587,6 +4618,7 @@ data.table
 status open
 
 \begin_layout Plain Layout
+
 \begin_inset Argument 1
 status open
 
@@ -4641,6 +4673,7 @@ ffdf
 status open
 
 \begin_layout Plain Layout
+
 \begin_inset Argument 1
 status open
 
@@ -4771,6 +4804,7 @@ Now let's consider the fact that very small substantive effects can be highly
 status open
 
 \begin_layout Plain Layout
+
 \begin_inset Argument 1
 status open
 
@@ -4793,6 +4827,7 @@ significance-prep, eval=FALSE, tidy=FALSE
 status open
 
 \begin_layout Plain Layout
+
 \begin_inset Argument 1
 status open
 
@@ -4943,6 +4978,7 @@ R, Matlab and Python all have functionality for storing and computing with
 status open
 
 \begin_layout Plain Layout
+
 \begin_inset Argument 1
 status open
 
