--- a/project/project.lyx
+++ b/project/project.lyx
@@ -1,5 +1,5 @@
-#LyX 2.3 created this file. For more info see http://www.lyx.org/
-\lyxformat 544
+#LyX 2.2 created this file. For more info see http://www.lyx.org/
+\lyxformat 508
 \begin_document
 \begin_header
 \save_transient_properties true
@@ -9,8 +9,15 @@
 \usepackage{/accounts/gen/vis/paciorek/latex/paciorek-asa,times,graphics}
 \input{/accounts/gen/vis/paciorek/latex/paciorekMacros}
 
+\hypersetup{unicode=true, pdfusetitle,
+bookmarks=true,bookmarksnumbered=false,bookmarksopen=false,
+ breaklinks=false,pdfborder={0 0 1},backref=false,colorlinks=true,}
+%\renewcommand{\baselinestretch}{1.5}
 
 %\renewcommand{\baselinestretch}{1.5}
+% Added by lyx2lyx
+\renewcommand{\textendash}{--}
+\renewcommand{\textemdash}{---}
 \end_preamble
 \use_default_options false
 \begin_modules
@@ -31,8 +38,6 @@ knitr
 \font_osf false
 \font_sf_scale 100 100
 \font_tt_scale 100 100
-\use_microtype false
-\use_dash_ligatures true
 \graphics default
 \default_output_format default
 \output_sync 0
@@ -62,7 +67,6 @@ knitr
 \suppress_date false
 \justification true
 \use_refstyle 0
-\use_minted 0
 \index Index
 \shortcut idx
 \color #008000
@@ -75,10 +79,7 @@ knitr
 \tocdepth 3
 \paragraph_separation indent
 \paragraph_indentation default
-\is_math_indent 0
-\math_numbering_side default
-\quotes_style english
-\dynamic_quotes 0
+\quotes_language english
 \papercolumns 1
 \papersides 1
 \paperpagestyle default
@@ -97,12 +98,11 @@ Stat243: Final group project
 \end_inset
 
 Due Thursday Dec.
- 14, 5 pm
+ 19, 5 pm
 \end_layout
 
 \begin_layout Standard
-The project will be done in groups of four, with students assigned randomly
- but balanced between statistics and non-statistics students.
+The project will be done in groups of three, with students assigned randomly.
 \end_layout
 
 \begin_layout Standard
@@ -116,6 +116,12 @@ A few comments.
 \begin_layout Standard
 The project will be graded as a letter grade and will count for about as
  much as two problem sets in your final grade.
+\end_layout
+
+\begin_layout Standard
+Please use standard citation practices to cite any papers/online reasources/peop
+le whose ideas you make use of.
+ Please do not consult with class members who are not in your group.
 \end_layout
 
 \begin_layout Section*
@@ -132,7 +138,6 @@ Your task is to make an R package to implement a genetic algorithm for variable
 LatexCommand href
 name "electronic book available on Oskicat"
 target "http://librarysurvey.berkeley.edu/librarysurvey/library.survey.logic?refUrl=http%3A%2F%2Fdx.doi.org%2F10.1002%2F9781118555552"
-literal "false"
 
 \end_inset
 
@@ -150,117 +155,6 @@ project
 Substantive and formatting requirements
 \end_layout
 
-\begin_layout Enumerate
-Your solution should allow the user to provide reasonable inputs, in terms
- of specifying a dataset and regression model formula, as well as the type
- of regression.
- Much of this is information you should just be able to pass along to 
-\emph on
-lm()
-\emph default
- or 
-\emph on
-glm()
-\emph default
-.
- By default you should just use AIC as your objective criterion/fitness
- function, but allow users to provide their own fitness function.
- Similarly you can use the genetic operators described in Givens and Hoeting
- for variable selection, but ideally your code should be general enough
- that a user could provide additional operators.
- 
-\end_layout
-
-\begin_layout Enumerate
-Your solution should involve modular code, with functions or OOP methods
- that implement discrete tasks.
- You should have an overall design and style that is consistent across the
- components, in terms of functions vs.
- OOP methods, naming of objects, etc.
- 
-\end_layout
-
-\begin_layout Enumerate
-In terms of efficiency, the generations are inherently sequential.
- However, you should try to vectorize as much as possible.
- If you like, you can allow for shared memory parallel processing when working
- with the population in a given generation, in particular the evaluation
- of the fitness function, but it is not required.
- 
-\end_layout
-
-\begin_layout Enumerate
-Show the results of using your implementation on two or more examples.
- Have the use of the package on the examples be coded in the example section
- of the R help for your main function.
-\end_layout
-
-\begin_layout Enumerate
-Formal testing is required, with a set of tests where results are compared
- to some known truth.
- You should have tests for the overall function and any modules that do
- anything complicated.
- For testing the overall function, since the algorithm is stochastic, you'll
- need to think carefully about how to set this up.
- You should also have unit tests for individual functions that carry out
- the individual computations that make up the algorithm.
- See mor details below on how to set up the tests.
- There is more information on testing here: 
-\begin_inset CommandInset href
-LatexCommand href
-target "http://r-pkgs.had.co.nz/tests.html"
-literal "false"
-
-\end_inset
-
-.
- 
-\end_layout
-
-\begin_layout Enumerate
-Your solution should include help/manual information as follows: 
-\begin_inset Separator latexpar
-\end_inset
-
-
-\end_layout
-
-\begin_deeper
-\begin_layout Enumerate
-Basic doc strings for any function you create (i.e., include comments at the
- beginning of the function), as well as commenting of code as appropriate.
-\end_layout
-
-\begin_layout Enumerate
-An overall help page for the primary function.
- This help page should be directly in the form of standard R documentation
- in a file called
-\emph on
- select.Rd
-\emph default
-.
- You can either write 
-\emph on
-select.Rd
-\emph default
- by hand or you can have it generated based on using the 
-\emph on
-roxygen2
-\emph default
- package (see 
-\begin_inset CommandInset href
-LatexCommand href
-target "http://adv-r.had.co.nz/Documenting-functions.html"
-literal "false"
-
-\end_inset
-
- for an example), with the documentation included in the R code files.
- You do not need help pages for your auxiliary functions.
- 
-\end_layout
-
-\end_deeper
 \begin_layout Enumerate
 Your solution to the problem should have two parts: 
 \begin_inset Separator latexpar
@@ -295,7 +189,6 @@ username
 \begin_inset CommandInset href
 LatexCommand href
 target "http://r-pkgs.had.co.nz/"
-literal "false"
 
 \end_inset
 
@@ -374,7 +267,7 @@ man
 \end_deeper
 \begin_layout Enumerate
 A PDF document describing your solution, prepared in R Markdown or \SpecialChar LaTeX
-.
++knitr.
  The description does not need to be more than 2-4 pages, but should describe
  the approach you took in terms of functions/modularity/object-oriented
  programming, the testing that you carried out, and the results of applying
@@ -382,10 +275,132 @@ A PDF document describing your solution, prepared in R Markdown or \SpecialChar 
  It must include a paragraph describing the specific contributions of each
  team member and which person/people were responsible for each component
  of the work.
- Please submit a paper copy of the document to me - either directly to me,
+ 
+\series bold
+Please submit a paper copy of the document to me - either directly to me,
  under my door, or in my mailbox.
  On your paper solution, please indicate the Github user name of the group
  member in whose Github repository the final version of the project resides.
+
+\series default
+ 
+\end_layout
+
+\end_deeper
+\begin_layout Enumerate
+You should start the process by mapping out the modular components you need
+ to write and how they will fit together, as well as what the primary function
+ will do.
+ After one person writes a component, another person on the team should
+ test it and, with the original coder, improve it.
+ 
+\end_layout
+
+\begin_layout Enumerate
+Your solution should allow the user to provide reasonable inputs, in terms
+ of specifying a dataset and regression model formula, as well as the type
+ of regression.
+ Much of this is information you should just be able to pass along to 
+\emph on
+lm()
+\emph default
+ or 
+\emph on
+glm()
+\emph default
+.
+ By default you should just use AIC as your objective criterion/fitness
+ function, but allow users to provide their own fitness function.
+ Similarly you can use the genetic operators described in Givens and Hoeting
+ for variable selection, but ideally your code should be general enough
+ that a user could provide additional operators.
+ 
+\end_layout
+
+\begin_layout Enumerate
+Your solution should involve modular code, with functions or OOP methods
+ that implement discrete tasks.
+ You should have an overall design and style that is consistent across the
+ components, in terms of functions vs.
+ OOP methods, naming of objects, etc.
+ 
+\end_layout
+
+\begin_layout Enumerate
+In terms of efficiency, the generations are inherently sequential.
+ However, you should try to vectorize as much as possible.
+ If you like, you can allow for shared memory parallel processing when working
+ with the population in a given generation, in particular the evaluation
+ of the fitness function, but it is not required.
+ 
+\end_layout
+
+\begin_layout Enumerate
+Show the results of using your implementation on two or more examples.
+ Have the use of the package on the examples be coded in the example section
+ of the R help for your main function.
+\end_layout
+
+\begin_layout Enumerate
+Formal testing is required, with a set of tests where results are compared
+ to some known truth.
+ You should have tests for the overall function and any modules that do
+ anything complicated.
+ For testing the overall function, since the algorithm is stochastic, you'll
+ need to think carefully about how to set this up.
+ You should also have unit tests for individual functions that carry out
+ the individual computations that make up the algorithm.
+ See mor details below on how to set up the tests.
+ There is more information on testing here: 
+\begin_inset CommandInset href
+LatexCommand href
+target "http://r-pkgs.had.co.nz/tests.html"
+
+\end_inset
+
+.
+ 
+\end_layout
+
+\begin_layout Enumerate
+Your solution should include help/manual information as follows: 
+\begin_inset Separator latexpar
+\end_inset
+
+
+\end_layout
+
+\begin_deeper
+\begin_layout Enumerate
+Basic doc strings for any function you create (i.e., include comments at the
+ beginning of the function), as well as commenting of code as appropriate.
+\end_layout
+
+\begin_layout Enumerate
+An overall help page for the primary function.
+ This help page should be directly in the form of standard R documentation
+ in a file called
+\emph on
+ select.Rd
+\emph default
+.
+ You can either write 
+\emph on
+select.Rd
+\emph default
+ by hand or you can have it generated based on using the 
+\emph on
+roxygen2
+\emph default
+ package (see 
+\begin_inset CommandInset href
+LatexCommand href
+target "http://adv-r.had.co.nz/Documenting-functions.html"
+
+\end_inset
+
+ for an example), with the documentation included in the R code files.
+ You do not need help pages for your auxiliary functions.
  
 \end_layout
 
@@ -410,15 +425,6 @@ You should use Git and Github to manage your collaboration.
 GA
 \emph default
  within the Github account of one of the project members.
- 
-\end_layout
-
-\begin_layout Enumerate
-You should start the process by mapping out the modular components you need
- to write and how they will fit together, as well as what the primary function
- will do.
- After one person writes a component, another person on the team should
- test it and, with the original coder, improve it.
  
 \end_layout
 
