added repo info to project

--- a/project/project.lyx
+++ b/project/project.lyx
@@ -425,7 +425,10 @@ You should use Git and Github to manage your collaboration.
 GA
 \emph default
  within the Github account of one of the project members.
- 
+ Please make the repository private and shared it with me (user 'paciorek'
+ on Github.com).
+ You should be able to make and access private repositories with an ordinary
+ Github.com account (without needing to show you have an educational affiliation).
 \end_layout
 
 \end_body
